#
# Makefile.am
#
# Copyright (C) 2011, Charles Karney <charles@karney.com>
# $Id$

EXAMPLE_FILES = \
	example-Accumulator.cpp \
	example-AlbersEqualArea.cpp \
	example-AzimuthalEquidistant.cpp \
	example-CassiniSoldner.cpp \
	example-CircularEngine.cpp \
	example-Constants.cpp \
	example-DMS.cpp \
	example-EllipticFunction.cpp \
	example-GeoCoords.cpp \
	example-Geocentric.cpp \
	example-Geodesic.cpp \
	example-GeodesicLine.cpp \
	example-GeographicErr.cpp \
	example-Geoid.cpp \
	example-Gnomonic.cpp \
	example-GravityCircle.cpp \
	example-GravityModel.cpp \
	example-LambertConformalConic.cpp \
	example-LocalCartesian.cpp \
	example-MGRS.cpp \
	example-MagneticCircle.cpp \
	example-MagneticModel.cpp \
	example-Math.cpp \
	example-NormalGravity.cpp \
	example-OSGB.cpp \
	example-PolarStereographic.cpp \
	example-PolygonArea.cpp \
	example-SphericalEngine.cpp \
	example-SphericalHarmonic.cpp \
	example-SphericalHarmonic1.cpp \
	example-SphericalHarmonic2.cpp \
	example-TransverseMercator.cpp \
	example-TransverseMercatorExact.cpp \
	example-UTMUPS.cpp \
	example-Utility.cpp

EXTRA_DIST = CMakeLists.txt $(EXAMPLE_FILES)
