#
# Makefile.am
#
# Copyright (C) 2011-2023, Charles Karney <karney@alum.mit.edu>

EXAMPLE_FILES = \
	example-Accumulator.cpp \
	example-AlbersEqualArea.cpp \
	example-Angle.cpp \
	example-AuxAngle.cpp \
	example-AuxLatitude.cpp \
	example-AzimuthalEquidistant.cpp \
	example-CassiniSoldner.cpp \
	example-CircularEngine.cpp \
	example-Constants.cpp \
	example-DMS.cpp \
	example-DST.cpp \
	example-Ellipsoid.cpp \
	example-EllipticFunction.cpp \
	example-GARS.cpp \
	example-GeoCoords.cpp \
	example-Geocentric.cpp \
	example-Geodesic.cpp \
	example-Geodesic-small.cpp \
	example-GeodesicExact.cpp \
	example-GeodesicLine.cpp \
	example-GeodesicLineExact.cpp \
	example-GeographicErr.cpp \
	example-Geohash.cpp \
	example-Geoid.cpp \
	example-Georef.cpp \
	example-Gnomonic.cpp \
	example-GravityCircle.cpp \
	example-GravityModel.cpp \
	example-Intersect.cpp \
	example-LambertConformalConic.cpp \
	example-LocalCartesian.cpp \
	example-MGRS.cpp \
	example-MagneticCircle.cpp \
	example-MagneticModel.cpp \
	example-Math.cpp \
	example-NearestNeighbor.cpp \
	example-NormalGravity.cpp \
	example-OSGB.cpp \
	example-PolarStereographic.cpp \
	example-PolygonArea.cpp \
	example-Rhumb.cpp \
	example-RhumbLine.cpp \
	example-SphericalEngine.cpp \
	example-SphericalHarmonic.cpp \
	example-SphericalHarmonic1.cpp \
	example-SphericalHarmonic2.cpp \
	example-TransverseMercator.cpp \
	example-TransverseMercatorExact.cpp \
	example-Trigfun.cpp \
	example-TrigfunExt.cpp \
	example-UTMUPS.cpp \
	example-Utility.cpp \
	example-Cartesian3.cpp \
	example-Conformal3.cpp \
	example-Ellipsoid3.cpp \
	example-Geodesic3.cpp \
	example-GeodesicLine3.cpp \
	GeoidToGTX.cpp \
	make-egmcof.cpp

EXTRA_DIST = CMakeLists.txt $(EXAMPLE_FILES)
