#
# Makefile.am
#
# Copyright (C) 2011, Charles Karney <charles@karney.com>

EXPERIMENTAL_FILES = \
	JacobiConformal.cpp JacobiConformal.hpp \
	example-AuxLatitude.cpp \
	AuxAngle.cpp AuxAngle.hpp \
	AuxLatitude.cpp AuxLatitude.hpp \
	DAuxLatitude.cpp DAuxLatitude.hpp \
	Rhumb.cpp Rhumb.hpp \
	NRhumbSolve.cpp NRhumbSolve.usage

EXTRA_DIST = CMakeLists.txt $(EXPERIMENTAL_FILES)
